# uniswap_v3_analyze_fees

./: .gitignore  Cargo.toml  README.md  justfile  local.env.example
example_output_data/: position_pnl_data.csv
example_pool_data/: burn_events.csv  collect_events_npm.csv  collect_events_pool.csv  decrease_liquidity_events.csv  decrease_liquidity_events_with_params.csv  increase_liquidity_events.csv  increase_liquidity_events_with_params.csv  initialize_events.csv  mint_events.csv  pool_created_events.csv
src/: abi.rs  main.rs
src/chain_interactions/: burn.rs  collect.rs  mint.rs  mod.rs  swap.rs
src/fee_analyzer/: contract_interactions.rs  csv_converter.rs  csv_output_writer.rs  mod.rs  simulation_events.rs
