[package]
name = "uniswap_v3_analyze_fees"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = {version = "0.9.2", features = ["consensus", "contract", "eips", "network", "providers","provider-ws", "transport-http", "pubsub", "rpc", "rpc-types", "sol-types", "json-abi", "reqwest", "node-bindings"]}
eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = [
    "local-time",
    "parking_lot",
], default-features = false }
tracing = { version = "0.1", features = [], default-features = false }
tracing-test = { version = "0.2", features = [
    "no-env-filter",
], default-features = false }
serde_json = "1.0.135"
bigdecimal = { version = "0.4.1", features = ["serde"] }
dotenv = "0.15.0"
csv = "1.3"
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
